// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pruebas sobre GifExpertApp Debe mostrar el componente correctamente 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ul />
</Fragment>
`;

exports[`pruebas sobre GifExpertApp debe de mostrar una lista de categorias 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ul>
    <GifGrid
      category="Paco"
      key="Paco"
    />
    <GifGrid
      category="Pepe"
      key="Pepe"
    />
  </ul>
</Fragment>
`;
